fix alignment of proposition

--- a/css/blocks/main-hero.css
+++ b/css/blocks/main-hero.css
@@ -88,10 +88,6 @@
     padding: 0 1rem;
 }
 
-.proposition__main-image {
-    align-items: center;
-}
-
 .proposition__img {
     width: 100%;
     height: auto;
